--- a/src/main/resources/static/resources/package.json
+++ b/src/main/resources/static/resources/package.json
@@ -53,6 +53,7 @@
     "intersection-observer": "^0.7.0",
     "jquery-hammerjs": "^2.0.0",
     "jquery-mobile-dist": "^1.4.3",
+    "jquery-timepicker": "^1.3.3",
     "jquery-ui": "^1.12.1",
     "jquery-ui-dist": "^1.12.1",
     "jquery.cookie": "^1.4.1",
